:sparkles: Fix social icons on mobile

--- a/src/styles/_contact.styl
+++ b/src/styles/_contact.styl
@@ -39,3 +39,6 @@
     p 
       font-size: 24px;
       width: 100%;
+    
+    .social-icons-container
+      margin-bottom: 150px;
