--- a/src/styles/_hero-box.styl
+++ b/src/styles/_hero-box.styl
@@ -18,6 +18,7 @@
 @media screen and (max-width: 700px)
   .hero-box
     top: 1vh;
+    margin-bottom: 80px;
 
     h2 
       font-size: 44px;
